rename output to -iife instead of .iife

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "version": "9.0.0",
     "name": "@pqina/jquery-pintura",
-    "browser": "dist/useEditorWithJQuery.iife.js",
+    "browser": "dist/useEditorWithJQuery.js",
     "main": "dist/useEditorWithJQuery.js",
     "module": "src/useEditorWithJQuery.js",
     "description": "Pintura Image Editor adapter for use with jQuery",
@@ -14,7 +14,7 @@
     ],
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "vite build && mv dist/useEditorWithJQuery.iife.js dist/useEditorWithJQuery-iife.js",
         "preview": "vite preview"
     },
     "peerDependencies": {
